# launchagents.py

./: README.md  setup.cfg  setup.py  todo.txt
launchagents/: __init__.py  agent.py  expanduser.py  list.py  load.py  tag.py  unload.py
tests/launchagents/examples/: files.py  jobs.py  load.py  read.py  unload.py  update.py  write.py
tests/launchagents/examples/cli/: list.sh  load.sh
tests/launchagents/examples/functions/: files.py
tests/launchagents/examples/functions/read/: com.google.keystone.agent.plist  example.py
