[metadata]
name = launchagents
version = 2018.11.15
url = https://github.com/looking-for-a-job/launchagents.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = LaunchAgents

[options]
install_requires = 
	columnate
	launchctl
	launchd_plist
	listify
	mac_colors
	public
	runcmd
	setuptools
	values
packages = 
	launchagents
