# https://pypi.org/project/setupcfg-generator/
[metadata]
name = launchagents
version = 2019.4.13
url = https://github.com/looking-for-a-job/launchagents.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = LaunchAgents

[options]
install_requires = 
	launchctl
	public
	setuptools
packages = 
	launchagents
